--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-table-app",
-  "homepage": "http://basir.github.io/react-table-app",
+  "homepage": "https://basir.github.io/react-table-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
